2006-04-25  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_is_untimed, event_set_untimed,
	event_clear_untimed): Removed declarations.
	(event_get_untimed, event_set_untimed): New declarations.
	* event-db.c (FLAG_UNTIMED): Remove define.
	(struct _Event): Remove field flags, add field untimed.  Update
	users.
	(GET_SET): Break the getter code into...
	(GET): ... this define.  Use this to implement event_get_uid and
	event_get_eventid.
	(GET_SET_FLAG): Remove define.
	(event_is_untimed, event_set_untimed, event_clear_untimed):
	Removed functions.
	(event_get_untimed, event_set_untimed): New functions.

	(event_db_new.load_callback0): Simply use parse_date.

2006-04-24  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (recur_type_t): Rename from this...
	(enum event_recurrence_type): ... to this.  Update users.
	(event_get_recurrence_type): New declaration.
	(event_set_recurrence_type): Likewise.
	(event_get_recurrence_start): Likewise.
	(event_set_recurrence_start): Likewise.
	(event_get_recurrence_end): Likewise.
	(event_set_recurrence_end): Likewise.
	* event-db.c (GET_SET): Don't reuse field as the variable name,
	take a new parameter instead.
	(event_get_recurrence_type): New function.
	(event_set_recurrence_type): Likewise.
	(event_get_recurrence_start): Likewise.
	(event_set_recurrence_start): Likewise.
	(event_get_recurrence_end): Likewise.
	(event_set_recurrence_end): Likewise.

2006-04-23  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (INCLUDES): Rename from this...
	(AM_CPPFLAGS): ... to this.
	(libeventdb_la_LDFLAGS): Bump the so version.
	(check_PROGRAMS): New.
	(test_event_list_SOURCES): Likewise.
	(test_event_list_LDADD): Likewise.
	(test_recur_daily_SOURCES): Likewise.
	(test_recur_daily_LDADD): Likewise.
	(test_recur_weekly_SOURCES): Likewise.
	(test_recur_weekly_LDADD): Likewise.
	(test_recur_monthly_SOURCES): Likewise.
	(test_recur_monthly_LDADD): Likewise.
	* test-event-list.c: New file.
	* test-recur-daily.c: Likewise.